[gd_scene load_steps=8 format=3 uid="uid://bf0th3io7i427"]

[ext_resource type="Texture2D" uid="uid://f5c2xtjff37q" path="res://Assets/Background/Background.jpg" id="1"]
[ext_resource type="Texture2D" uid="uid://d28rf2oyra5au" path="res://Assets/Cards/Card Borders etc/Back_Texture.png" id="2"]
[ext_resource type="Texture2D" uid="uid://kaqfn7wtnvv2" path="res://Assets/Cards/Card Borders etc/Gold_Border.png" id="3"]
[ext_resource type="Script" path="res://Playspace.gd" id="4"]
[ext_resource type="Script" path="res://DeckDraw.gd" id="5"]
[ext_resource type="PackedScene" path="res://Enemy.tscn" id="6"]
[ext_resource type="Script" path="res://DiscardPile.gd" id="7"]

[node name="Playspace" type="Node2D"]
script = ExtResource("4")

[node name="CardSlots" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="EnemyLeft" parent="Enemies" instance=ExtResource("6")]
visible = false

[node name="EnemyRight" parent="Enemies" instance=ExtResource("6")]
visible = false

[node name="CardsInPlay" type="Node" parent="."]

[node name="Cards" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(586.792, 326.211)
scale = Vector2(0.611675, 0.589323)
texture = ExtResource("1")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(1011, 80)

[node name="DeckDraw" type="TextureButton" parent="Deck"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("2")
texture_disabled = ExtResource("3")
script = ExtResource("5")

[node name="Discard" type="Node2D" parent="."]
position = Vector2(1012, 311)

[node name="DiscardPile" type="TextureButton" parent="Discard"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("2")
texture_disabled = ExtResource("3")
script = ExtResource("7")
